# board-game-recommender

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Pipfile  README.md  pyproject.toml  requirements-top.txt  requirements.txt  setup.py  trust.ipynb
board_game_recommender/: __init__.py  __main__.py  __version__.py  base.py  baseline.py  dnn.py  evaluation.py  experiment_ranking.py  hyperparameter.py  light.py  lightfm.py  rankings.py  recommend.py  trust.py  utils.py
ludoj/: load.py  recommend.py  utils.py
ludoj_recommender/: __init__.py  __main__.py  __version__.py  load.py  recommend.py  sort.py  utils.py
notebooks/: ndcg.py  ndcg_polars.py  ndcg_train_test.py  rankings.csv  rankings.ipynb  rankings.py  trust.ipynb  trust.py
