[tool.poetry]
name = "board-game-recommender"
version = "2.1.4"
description = "Board games recommender engine"
authors = ["Markus Shepherd <markus@recommend.games>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
pytility = "^0.3.0"
turicreate = "^6.4.1"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
mypy = "^0.910"
pre-commit = "^2.15.0"
pylint = "^2.12.1"
ipython = "^7.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
